# altqq

./: .gitignore  README.md
diffur/: laba1sem2.rar
diffur/dop/: dop.tex
diffur/laba1/: laboratorya.aux  laboratorya.tex  laboratorya.toc
diffur/laba1sem2/: main.py
diffur/laba2/: laba2.aux  laba2.tex  laba2.toc
diffur/laba3/: kotlinlisting.sty  laba3.aux  laba3.tex  laba3.toc
diffur/laba4/: laba4.aux  laba4.tex  laba4.toc
diffur/laba4_akulenko/: laba4.aux  laba4.tex  laba4.toc
ecomometrica/: rabota3.xlsx  rabota4.xlsx  rabota_1.xlsx
economica/: Агличеев.xlsx  Агличеева.xlsx  Кр2 Агличеев.xlsx  Кр3 Агличеев.xlsx
economica/lab1/: perv.csv  vtor.csv  Агличеев_лаб1.docx
economica/lab2/: Агличеев_лаб2.docx  Книга1.csv
konechnii_element/FreeFem/: plot.gp  square.edp  square2.edp  test1.edp  test2.edp  test3.edp  test4.edp  xs.txt  ys.txt
konechnii_element/idz1/: Агличеев ИДЗ1.rtf
konechnii_element/idz2/: .data.txt.swp  .data_BASE_490.txt.swp  .data_LOCAL_490.txt.swp  .data_REMOTE_490.txt.swp  data.txt  main.py  test.py  xs.txt  ys.txt
konechnii_element/idz3/: laba2.tex
konechnii_element/idz4/: laba2.tex
konechnii_element/lab1/: lab_3.py  lab_5.py  main.py
matmod/laba1/: fefutitle.sty  laba4.aux  laba4.tex  laba4.toc
matmod/laba2/: pom.xml
matmod/laba3/: laba3 shizo.mcdx
os/lab5/logger/: CMakeLists.txt  temp_logger.cpp
os/lab5/server/: CMakeLists.txt  server.cpp
splines/: a.docx  diplom.docx  lab4.docx  ~$diplom.docx  Агличеев ВКР.docx  Агличеев.docx  ЗАДАНИЕ.docx  Классические кубические сплайны класса С2.docx
vichmat/: laba6.rar
(+176 files in other folders)
