cmake_minimum_required(VERSION 3.0)
PROJECT(logger)
ADD_EXECUTABLE(logger my_serial.hpp temp_logger.cpp)
IF (WIN32)
	TARGET_INCLUDE_DIRECTORIES(logger PUBLIC "C:/Program Files/MySQL/MySQL Server 8.0/include")
	TARGET_LINK_LIBRARIES(logger "C:/Program Files/MySQL/MySQL Server 8.0/lib/libmysql.lib")
	TARGET_LINK_LIBRARIES(logger -static-libgcc -static-libstdc++)
ELSE() 
	TARGET_LINK_LIBRARIES(server mysqlclient)
ENDIF(WIN32)