cmake_minimum_required(VERSION 3.0)
PROJECT(server)
ADD_EXECUTABLE(server server.cpp)
IF (WIN32)
    TARGET_LINK_LIBRARIES(server ws2_32)
	TARGET_LINK_LIBRARIES(server -static-libgcc -static-libstdc++)
	TARGET_INCLUDE_DIRECTORIES(server PUBLIC "C:/Program Files/MySQL/MySQL Server 8.0/include")
	TARGET_LINK_LIBRARIES(server "C:/Program Files/MySQL/MySQL Server 8.0/lib/libmysql.lib")
ELSE() 
	TARGET_LINK_LIBRARIES(server mysqlclient)
ENDIF(WIN32)
